Fixed text cut off scrolling issue on other laptop

--- a/01 html and css refresher/style.css
+++ b/01 html and css refresher/style.css
@@ -102,12 +102,12 @@ p.post{
     color: black;
     background-color: rgba(0, 0, 0, 0);
     width:auto;
-    overflow: scroll;
+    /*overflow: scroll;*/
     
 }
 .blogintropage {
     padding: 30px;
-    height: 100%;
+    height: 90%;
     color: black;
     background-color: rgba(255, 255, 255, 0.8);
     width: 1100px;
